# saas-loc

./: .env.example  .gitignore  Dockerfile  README.md  create_admin.py  docker-compose.prod.yml  docker-compose.yml  main.py  requirements.txt  tree_diretorio.txt
backend/: Dockerfile  create_admin.py  pom.xml  pyproject.toml  requirements.txt
backend/app/: exceptions.py  main.py
backend/app/api/: abastecimentos.py  attachments.py  audit_logs.py  auth.py  checklists.py  clientes.py  contratos.py  danos.py  dashboard.py  financeiro.py  frota.py  leituras_km.py  manutencoes.py  motoristas.py  multas.py  planos_manutencao.py  pneus.py  router.py  sinistros.py  veiculo_publico.py
backend/app/core/: audit.py  config.py  database.py  deps.py  permissions.py  security.py  storage.py
backend/app/models/: __init__.py  abastecimento.py  attachment.py  audit_log.py  base.py  checklist.py  cliente.py  contrato.py  dano.py  financeiro.py  leitura_km.py  manutencao.py  motorista.py  multa.py  plano_manutencao.py  pneu.py  (+4 more)
backend/migrations/: env.py
backend/scripts/: seed_dev_data.py  sync_requirements.py
backend/tests/: conftest.py  test_abastecimentos.py  test_attachments.py  test_audit_logs.py  test_auth.py  test_checklists.py  test_clientes.py  test_contratos_concorrencia.py  test_contratos_fluxo.py  test_dashboard.py  test_financeiro.py  test_franquia_km.py  test_frota.py  test_incidentes.py  test_leituras_km.py  test_manutencoes.py  test_motoristas.py  test_planos_manutencao.py  test_pneus.py  test_vehicle_tracking.py  test_veiculo_pdf.py  test_veiculo_publico.py
(+455 files in other folders)
