[project]
name = "locadora-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.36",
  "alembic==1.14.0",
  "psycopg[binary]==3.2.3",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "email-validator==2.2.0",
  "pyjwt==2.10.1",
  "bcrypt==4.2.1",
  "python-multipart==0.0.20",
]

[dependency-groups]
dev = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "httpx==0.28.1",
  "ruff==0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # Depends(...) como default de argumento é o padrão idiomático do FastAPI

[tool.pytest.ini_options]
testpaths = ["tests"]
